# simeis

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  ci.yaml  create_zip.sh  economy.ods  flake.nix
.forgejo/: functests.py  generate_swagger.py  scripts.nix
.forgejo/workflows/: ci.yaml
.github/workflows/: ci.yml  dependabot_diy.yml  rust.yml
.swagger/: swagger-initializer.js
doc/: swagger.json
example/: .gitignore  bigtest.sh  client.py  watch_game.py
example/python/: client.py  sdk.py
example/rust/: Cargo.toml
example/rust/src/: main.rs  sdk.rs
sdk/: python.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
simeis-data/: Cargo.toml
simeis-data/src/: crew.rs  errors.rs  galaxy.rs  game.rs  industry.rs  market.rs  player.rs  ship.rs  syslog.rs
simeis-data/src/galaxy/: planet.rs  scan.rs  station.rs
simeis-data/src/ship/: cargo.rs  module.rs  navigation.rs  resources.rs  upgrade.rs
simeis-data/src/utils/: mod.rs  shardeddata.rs
simeis-server/: Cargo.toml
simeis-server/src/: api.rs  crew.rs  main.rs
simeis-server/src/api/: crew.rs  industry.rs  player.rs  ship.rs  shipyard.rs  station.rs  station_shop.rs  system.rs
src/: api.rs  crew.rs  errors.rs  galaxy.rs  game.rs  main.rs  market.rs  player.rs  ship.rs  tests.rs
src/galaxy/: planet.rs  scan.rs  station.rs
src/ship/: cargo.rs  module.rs  resources.rs  shipstats.rs
