[package]
name = "simeis"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
env_logger = "0.11.6"
log = "0.4.26"
ntex = { version = "2.11.0", features = ["compress", "tokio"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
urlencoding = "2.1.3"
