[package]
name = "simeis"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.26"
rand = "0.9.0"
base64 = "0.22.1"
env_logger = "0.11.6"
urlencoding = "2.1.3"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
ntex = { version = "2.11.0", features = ["compress", "tokio"] }
strum = { version = "0.27.1", features = ["derive"] }
rand_distr = "0.5.1"

[features]
default = []
testing = []

[profile.release]
opt-level = 3
strip = "symbols"
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 8
