[workspace]
resolver = "2"
members = ["simeis-data", "simeis-server"]
exclude = ["example/rust"]

[workspace.dependencies]
log = "0.4.26"
env_logger = "0.11.6"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
strum = { version = "0.27.1", features = ["derive"] }
base64 = "0.22.1"
tokio = { version = "*", features = ["time", "rt", "sync", "rt-multi-thread"] }
