[package]
name = "simeis-data"
version = "0.1.3"
edition = "2021"

[dependencies]
rand_distr = "0.6.0"

base64 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
mea = { workspace = true }

[features]
default = []
testing = []
extraspeed = []
