[package]
name = "simeis-server"
version = "0.1.0"
edition = "2021"

[dependencies]
simeis-data = { path = "../simeis-data" }
urlencoding = "2.1.3"
ntex = { version = "2.11.0", features = ["compress", "tokio"] }

base64 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }

[features]
default = []
testing = ["simeis-data/testing"]

[profile.release]
opt-level = 3
strip = "symbols"
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 8
